# LLMuserprofile

./: .gitignore  README.md  pyproject.toml
.cursor/: 核心功能.md  用户画像生成流程详解.md
.cursor/.rules/: 文档编写.mdc
src/: __init__.py  app.py  llm_client.py
src/api/: profile_endpoints.py  user.db
src/core/: intent_analysis.py  profile_workflow.py  sentiment_analysis.py  tag_extraction.py  user_segmentation.py
src/data/: generated-requests.http  loader.py
src/models/: extract_models.py  user_profile.py
