[project]
name = "ai-workflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "langchain-community>=0.3.25",
    "langchain[openai]>=0.3.25",
    "langgraph>=0.4.8",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "streamlit>=1.45.1",
    "uvicorn>=0.34.3",
]
